# TripoSH-Model

./: .gitignore  Makefile  env.yml  pyproject.toml  setup.py
cpp/: kernel.hpp
pycuba/: __init__.py
