[build-system]
requires = [
    'setuptools>=61.0.0',
    'Cython>=0.25',
    'extension-helpers',
    'oldest-supported-numpy',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'Bispectrum_Model'
version = '0.1.0'
requires-python = '>=3.8'
dependencies = [
    'numpy>=1.17',
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ['.']

